2007-01-02 Jens Tkotz <jens@peino.de> 1.6-alpha3-svn-b38

 Thanks to Rasmus Lerdorf for reporting these bugs:

 * Fix: album::addPhoto() returns an array.
	    This was handled wrong in:
		- gallery_remote2.php
	    - popups/move_photo.php
	    - popups/copy_photo.php

 * Fix: Gallery remote can't handle HTML status messages.
	    Added global $plainErrorMessage in addPhotos()

 * Fix: Capture Date was saved wrong.

2006-12-31 Jens Tkotz <jens@peino.de> 1.6-alpha3-svn-b37

 * Fix: realpath() on an URL in getGalleryBaseUrl()

 * Fix: Check for tempfolder when creating captcha instance was wrong.

 Thanks to Kai for reporting these bugs !

 * Change: remove leading / from captcha tempfolder
 
2006-12-28 Jens Tkotz <jens@peino.de> 1.6-alpha3-svn-b36

 * Change: Splitted tools/build_manifest.php into
			- tools/build_manifest_1_3.php
			- tools/build_manifest_1_4.php

 * Change: Added .ttf into list for files that can not have a
		   G1 comparable SVN Version for checkVersions()

 * Updated Manifest.
 
2006-12-26 Jens Tkotz <jens@peino.de> 1.6-alpha3-svn-b35

 * Change: Alignment in register popup.

2006-12-26 Jens Tkotz <jens@peino.de> 1.6-alpha3-svn-b34

 * Fix: Name and email of recepient was not
        correct initialized in ecard popup.

2006-12-26 Jens Tkotz <jens@peino.de> 1.6-alpha3-svn-b33

 * Change: Changed all '    ' (4 spaces) to 1 tab.

2006-12-26 Jens Tkotz <jens@peino.de> 1.6-alpha3-svn-b32

 * Change: Added includes/comments/commentHandling.inc.php
	       Moved redundant functionality in it from:
		   - popups/add_comment.php
		   - view_photo.php

 * Change: Add-comment-check generates dedicated $comment_messages array.
		   Used in:
		   - lib/content.php
		   - popups/add_comment.php
		   - templates/photo.tpl.default

2006-12-26 Jens Tkotz <jens@peino.de> 1.6-alpha3-svn-b31

 * Fix/CHANGE: Made tempfolder for captcha relative to albumdir.
			   This makes it possible to use a full url.


 * Change: Disable maxtry parameter
